@startuml ERD

entity "User" {
  +id: UUID
  --
  name
  email
  password
  avatar
  is_admin
  created_at
  updated_at
}

' entity "Notification" {
'   +id: UUID
'   --
'   created_at
'   updated_at
'   type
'   sended_at
'   content
'   --
'   event_id
' }

entity "Event" {
  +id: UUID
  --
  created_at
  updated_at
  name
  content
  started_at
  ended_at
  access_code
  qr_code
  upload_status
}

entity "Participant" {
  +id: UUID
  --
  role
  created_at
  updated_at
  --
  user_id
  event_id
}

entity "Photo" {
  +id: UUID
  --
  url
  uploaded_at
  status
  --
  event_id
  participant_id
}

' entity "Album" {
'   +id: UUID
'   --
'   name
'   created_at
'   photo_count
'   --
'   event_id
' }

' entity "Like" {
'   +id: UUID
'   --
'   liked_at
'   created_at
'   --
'   participant_id
'   photovideo_id
' }

/' User ||--o{ Event : "creates/participates" '/
User ||-right-o{ Participant
Event||-left-|{ Participant
Participant ||--o{ Photo
' Participant ||--o{ Like
' Participant }o-up-o{ Notification 
' PhotoVideo }o-right-o| Album
Event ||--o{ Photo
' Event ||--o{ Album
' Event ||-up-o{ Notification
' PhotoVideo ||-left-o{ Like

@enduml